--- a/UnityMiniBrainClient/Builds/IBLMini-webgl/index.html
+++ b/UnityMiniBrainClient/Builds/IBLMini-webgl/index.html
@@ -6,7 +6,7 @@
     <title>Unity WebGL Player | UnityMiniBrainClient</title>
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
-    <canvas id="unity-canvas" width=800 height=800 style="width: 800px; height: 800px; background: #231F20"></canvas>
+    <canvas id="unity-canvas" width=800 height=800 tabindex="-1" style="width: 800px; height: 800px; background: #231F20"></canvas>
     <script src="Build/IBLMini-webgl.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
@@ -31,7 +31,7 @@
         streamingAssetsUrl: "StreamingAssets",
         companyName: "VirtualBrainLab",
         productName: "UnityMiniBrainClient",
-        productVersion: "0.2.2",
+        productVersion: "0.3",
         // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
         // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
       });
